--- a/estilos.scss
+++ b/estilos.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital@1&display=swap');
 
 *{
     margin: 0;
@@ -8,11 +9,13 @@
 
 
 main {
+    width: 100%;
+    height: 50em;
     background-image: url(img/main2.jpg);
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
     background-position: center;
-    height: 80em;
+    
     .titulo {
         display: flex;
         flex-direction: column;
@@ -22,23 +25,25 @@ main {
         height: 30em;
         width: 100%;
         .titulo1{
-            margin-top: 4em;
+            margin-top: 10em;
             margin-left: 14em;
             h1 {
                 color: orange;
                 font-size: 8em;
                 text-transform: uppercase;
                 font-family: 'Bebas Neue', cursive;
+                font-weight: bold;
                 
             }
             span{
-                color: black;
+                color: whitesmoke;
                 padding: .2em;
             }
             
             p{
-                color: black;
+                color: white;
                 font-size: 1.5em;   
+                font-weight: bold;
             }
             .btn{
                 font-size: 1.2em;
@@ -64,7 +69,9 @@ main {
         font-family: 'Bebas Neue', cursive;
         color: orange;
     }
-
+    .colorS {
+        height: 52em;
+    }
 }
 
 .blitzStart{
@@ -73,9 +80,8 @@ main {
     .start1{
         width: 30%;
         .start {
-            font-size: 4em;
+            font-size: 3.5em;
             margin-left: 2em;
-            margin-top: 1em;
             font-size:'Bebas Neue', cursive; 
             border-bottom: solid ;
             color: #27A2FF;
@@ -84,39 +90,86 @@ main {
     } 
 }
 
-.colorS {
-    height: 52em;
-}
-
 .especifiC{
-    margin: 2em;
     display: flex;
+    flex-wrap: wrap;
     .especifiC1{
-        padding-left: 3EM;
-        padding-right: 3EM;
-        padding-top: 1EM;
+        padding-left: 1em;
+        padding-right: 1em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-family: 'PT Sans', sans-serif;
+        color: orange;
+        font-size: 1.5em;
+        .especifiC1-1{
+            margin-top: 2em;
+            color: black;
+            font-size: .8em;
+        }
     }
     .especifiC2{
-        width: 70%;
+        width: 95%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: start;
-        border-top: 1PX solid black;
-        border-bottom: 1PX solid black;
+        border-top: 1PX solid orange;
+        border-bottom: 1PX solid orange;
         margin-top: 1.2EM;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 1.1em;
     }
     .especifiC3{
-        width: 70%;
+        width: 95%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: start;
-        border-top: 1PX solid black;
-        border-bottom: 1PX solid black;
+        border-top: 1PX solid orange;
+        border-bottom: 1PX solid orange;
         margin-top: 1.2EM;
+        font-family: 'PT Sans', sans-serif;
+        font-size: 1.1em;
+    }
+    .bolD{
+        font-weight: bold;
+        font-size: 1.2em;
     }
 }
+
+
+.usadosAccesorios{
+display: flex;
+align-items: center;
+justify-content: space-around;
+margin-top: 3em;
+flex-wrap: wrap;
+.usadoS{
+    height: 30em;
+    padding-top: 1em;
+    height: 30em;
+    display: flex;
+    flex-direction: column;
+    justify-content:start;
+    align-items: center;
+    margin-top: 3em;
+    border: solid 3px orange;
+    border-radius: 5%;
+    .start{
+        width: 100%;
+        font-size: 2em;
+        font-size:'Bebas Neue', cursive; 
+        color:#27A2FF;
+        font-weight: bold;
+        text-align: center;
+        padding-top: 1em;
+    }
+}
+}
+
+
 
 /* .carousel-inner{
     height: 70em;
@@ -161,6 +214,3 @@ main {
     justify-content: start;
     align-items: start;
 } */
-
-
-
