--- a/estilos.css
+++ b/estilos.css
@@ -9,7 +9,7 @@
 
 main {
   width: 100%;
-  height: 50em;
+  height: 60em;
   background-image: url(img/main2.jpg);
   background-repeat: repeat;
   background-size: cover;
@@ -150,7 +150,7 @@ main .titulo .titulo1 .btn {
 }
 
 .especifiC .especifiC2 {
-  width: 95%;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -161,9 +161,9 @@ main .titulo .titulo1 .btn {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-top: 1PX solid orange;
   border-bottom: 1PX solid orange;
   margin-top: 1.2EM;
@@ -172,7 +172,7 @@ main .titulo .titulo1 .btn {
 }
 
 .especifiC .especifiC3 {
-  width: 95%;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -183,9 +183,9 @@ main .titulo .titulo1 .btn {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-top: 1PX solid orange;
   border-bottom: 1PX solid orange;
   margin-top: 1.2EM;
@@ -244,43 +244,162 @@ main .titulo .titulo1 .btn {
   padding-top: 1em;
 }
 
-/* .carousel-inner{
-    height: 70em;
-    img{
-        height: 70em;
-    };
-} */
-/* .gestoriA{
-    height: 50vh;
-    display: flex;
-    border-radius: 50%; 
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    background-image: url(img/gestoria.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 3em;
-    h2{
-        font-size: 4em;
-        font-family: 'Bebas Neue', cursive; 
-        color: white;
-        text-shadow: 0px 0px 12px black;
-    }     
-} */
-/* .gestoriA1{
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-items: start;
-    margin: 3em;
-} */
-/* .carousel-caption{
-    display: flex;
-    justify-content: start;
-    align-items: start;
-} */
+.wpp {
+  padding: 2em;
+  position: fixed;
+  bottom: 1em;
+  z-index: 100;
+  left: .5em;
+}
+
+.wpp img:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.up {
+  padding: 2em;
+  position: fixed;
+  bottom: 1em;
+  z-index: 100;
+  right: .5em;
+}
+
+.gestoriaFed {
+  margin-top: 3em;
+}
+
+.gestoriA1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.gestoriA1 h2 {
+  font-size: 3em;
+  font-family: 'Bebas Neue', cursive;
+  color: black;
+  border-bottom: solid 3px #27A2FF;
+  margin-bottom: 1em;
+}
+
+.gestoriA1 p {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 1.5em;
+}
+
+.contact {
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 30em;
+}
+
+.horario {
+  height: 20em;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: solid 3px #27A2FF;
+  border-radius: 5%;
+}
+
+.horario h3 {
+  margin-bottom: 1.5em;
+  font-size: 2em;
+}
+
+.horario p {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.telefono {
+  height: 20em;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: solid 3px #27A2FF;
+  border-radius: 5%;
+}
+
+.telefono h3 {
+  margin-bottom: 1.5em;
+  font-size: 2em;
+}
+
+.telefono p {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.nomb {
+  padding: 1em;
+  text-align: start;
+}
+
+footer {
+  background-color: black;
+  height: 20em;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+}
+
+footer ul {
+  text-decoration: none;
+  list-style: none;
+  text-align: center;
+  padding: 3em;
+}
+
+footer ul li {
+  padding-top: 1em;
+  font-size: 1.2em;
+}
+
+footer ul li img {
+  padding: .5em;
+}
+
+footer p {
+  font-size: 1.2em;
+}
 /*# sourceMappingURL=estilos.css.map */
